Fix #1 HW7